--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,7 +35,8 @@ a{
     height: 370px;
     margin: 15px;
     border-radius: 10px;
-    transition: transform 0.5s;
+    transition: transform 0.5s ease-in-out;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .img:houver {
