--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,23 +35,13 @@ a{
     height: 370px;
     margin: 15px;
     border-radius: 10px;
-    transition: transform 0.5s ease-in-out;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.5s;
 }
 
 .img:houver {
-    animation: flutuar 1.2s infinite alternate ease-in-out;
+    transform: scale(1.1) rotate(2deg);
 }
 
-@keyframes flutuar {
-   0% {
-    tranform: translateY(0) scale(1.05) rotate(0deg);
-  }
-  50% {
-    trasnform: translateY(-10px) scale(1.1) rotate(2deg);
-  }
-  100% {
-    transform: translateY(0) scale(1.05) rotate(-2deg);
-  }
+img {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-
